--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,13 @@
 # Done to increase the memory available to gradle.
+org.gradle.java.home=C:\\Utilities\\jbr_jcef-21.0.5-windows-x64-b631.8
 org.gradle.jvmargs=-Xmx16G
 org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.20.4
-yarn_mappings=1.20.4+build.3
-loader_version=0.15.9
+minecraft_version=1.21.3
+yarn_mappings=1.21.3+build.2
+loader_version=0.16.9
 
 # Mod Properties
 mod_version=1.0.0
@@ -14,4 +15,4 @@ maven_group=com.kalightortaio
 archives_base_name=veterandifficulty
 
 # Dependencies
-fabric_version=0.96.11+1.20.4
+fabric_version=0.107.0+1.21.3
