--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,15 @@
 # Done to increase the memory available to gradle.
+org.gradle.java.installations.auto-download=false
+org.gradle.java.installations.paths=C:\\Utilities\\jbr_jcef-21.0.5-windows-x64-b631.8
 org.gradle.java.home=C:\\Utilities\\jbr_jcef-21.0.5-windows-x64-b631.8
 org.gradle.jvmargs=-Xmx16G
 org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.4
-yarn_mappings=1.21.4+build.7
-loader_version=0.16.9
+minecraft_version=1.21.7
+yarn_mappings=1.21.7+build.7
+loader_version=0.16.14
 
 # Mod Properties
 mod_version=1.0.0
@@ -15,4 +17,4 @@ maven_group=com.kalightortaio
 archives_base_name=veterandifficulty
 
 # Dependencies
-fabric_version=0.114.0+1.21.4
+fabric_version=0.129.0+1.21.7
